--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 }
 
 body {
-  background: var(--bg-url) no-repeat top center/cover;
+  background: var(--bg-url) no-repeat top center;
   height: 100vh;
 }
 
@@ -204,10 +204,6 @@ footer {
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
-
-  #skills img {
-    margin: 0 5px;
-  }
 }
 
 @media (min-width: 375px) {
@@ -220,7 +216,7 @@ footer {
   }
 
   #skills img {
-    margin: 3px;
+    margin: 2px;
   }
 }
 
