--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 }
 
 body {
-  background: var(--bg-url) no-repeat top center;
+  background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
 }
 
