--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ ul li a:hover {
   background: var(--highlight-color);
 } */
 
-footer {
+.footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
